--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 
 
 </div>
+<script src="classes/square.js"></script>
+<script src="classes/player.js"></script>
+<script src="classes/board.js"></script>
+<script src="classes/game.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
